# knowledge-base-gpt

./: .gitignore  .pycodestyle  .pylintrc  Containerfile  LOCAL_DEPLOYMENT.md  Makefile  README.md  ingest.py  privateGPT.py  pyproject.toml  renovate.json  requirements.txt  settings.yaml  slack_bot.py
.github/workflows/: helmlint.yml  pycodestyle.yml  pylint.yml  release.yml
.tekton/: knowledge-base-gpt-pull-request.yaml  knowledge-base-gpt-push.yaml
cloud/ansible/: .gitignore  README.md  settings.yml
cloud/ansible/playbooks/: all_in_one.yml  playbook.yml  secure-ollama.yml
cloud/helm/: .gitignore  README.md
cloud/helm/knowledgebase-slackbot/: .gitignore  Chart.yaml  README.md  values.yaml
cloud/helm/knowledgebase-slackbot/templates/: NOTES.txt  _envoy-config.tpl  _fluentbit_config.tpl  _helpers.tpl  _ingest_job_spec.tpl  _knowledgebase-config.tpl  _metricbeat-config.tpl  _vault.tpl  certificate.yaml  elastic-pvc.yaml  embedding-volume.yaml  fluent-bit-configmap.yaml  forward-channel-secret.yaml  hooks-sa-role.yml  ingest-cronjob.yaml  ingest-folder-id-secret.yaml  ingest-job-hook.yaml  ingest.yaml  kibana-pvc.yaml  logs-pvc.yaml  (+22 more)
cloud/terraform/: .gitignore  providers.tf  security-group-ollama.tf  variables.tf
cloud/terraform/aws/: main.tf  outputs.tf  security-group-gradio.tf  security-group-http.tf  security-group-ollama.tf  security-group-outbound.tf  security-group-ssh.tf  security-group-webui.tf  variables.tf
cloud/terraform/gcp/: README.md  main.tf  networking.tf  outputs.tf  providers.tf  variables.tf
fluentbit/: data.yml  fluent-bit.conf  fluent-bit.conf.j2  parsers.conf
knowledge_base_gpt/apps/gradio/: app.py
knowledge_base_gpt/apps/ingest/: __main__.py  ingest.py
knowledge_base_gpt/apps/slackbot/: __main__.py  slack_bot.py
knowledge_base_gpt/libs/common/: constants.py
knowledge_base_gpt/libs/embedding/: embedding.py
knowledge_base_gpt/libs/gpt/: ollama_info.py  private_chat.py  private_gpt.py
knowledge_base_gpt/libs/history/: base.py  history.py  memory.py  redis.py
knowledge_base_gpt/libs/injector/: di.py
knowledge_base_gpt/libs/loaders/: google_drive_loader.py  loaders.py
knowledge_base_gpt/libs/logs/: chat_fragment.py  chat_log_exporter.py  fake.py  logger.py  ollama.py  openai.py
knowledge_base_gpt/libs/metrics/: ollama.py
knowledge_base_gpt/libs/settings/: settings.py  settings_loader.py
knowledge_base_gpt/libs/vectorstore/: vectorstore.py
libs/common/: constants.py
libs/gpt/: private_gpt.py
slack/: manifest.yml
tests/helmlint/: dummy-service.json  dummy-values.yml
tests/sub-system/simple_test/: test_bot.py
(+48 files in other folders)
