[tool.poetry]
name = "knowledge-base-gpt"
version = "0.1.0"
description = ""
authors = ["Ygal Blum <ygal.blum@gmail.com>"]
license = "Apache Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.2.5"
langchain-community = "0.2.5"
chromadb = "0.5.0"
google-api-python-client = "2.133.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.0"
PyPDF2 = "3.0.1"
slack_bolt = "1.19.0"
redis = "5.0.6"
injector = "^0.21.0"
envyaml = "^1.10.211231"
sentence-transformers = "^3.0.0"
langchain-openai = "^0.1.3"
langchain-huggingface = "^0.0.3"
langchain-google-community = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
