[tool.poetry]
name = "knowledge-base-gpt"
version = "0.1.0"
description = ""
authors = ["Ygal Blum <ygal.blum@gmail.com>"]
license = "Apache Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.3.3"
langchain-community = "0.3.2"
chromadb = "0.5.15"
google-api-python-client = "2.149.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.1"
PyPDF2 = "3.0.1"
slack_bolt = "1.20.1"
redis = "5.1.1"
injector = "^0.22.0"
envyaml = "^1.10.211231"
langchain-openai = "^0.2.0"
langchain-huggingface = {version = "^0.1.0", optional = true}
langchain-google-community = "^2.0.0"
pysqlite3-binary = { version = "^0.5.3", optional = true}
protobuf = "3.20.*"

[tool.poetry.extras]
pysql-b = ["pysqlite3-binary"]
local-embeddings = ["langchain-huggingface"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
